# be-task-ca

./: .gitignore  pyproject.toml  ruff.toml  scripts.py
be_task_ca/: app.py  commands.py  common.py  database.py  dependencies.py
be_task_ca/app/: main.py
be_task_ca/app/commands/: schema.py
be_task_ca/app/dependencies/: item.py  user.py
be_task_ca/domain/item/: entities.py  usecases.py
be_task_ca/domain/user/: entities.py  schema.py  usecases.py
be_task_ca/infra/: database.py
be_task_ca/infra/item/: in_memory_repository.py  models.py  sqlalchemy_repository.py
be_task_ca/infra/user/: in_memory_repository.py  item_service.py  models.py  sqlalchemy_repository.py
be_task_ca/interfaces/: item.py  user.py
be_task_ca/item/: api.py  entities.py  interfaces.py  schema.py  usecases.py
be_task_ca/item/infra/: models.py  sqlalchemy_repository.py
be_task_ca/user/: api.py  entities.py  interfaces.py  usecases.py
be_task_ca/user/infra/: item_service.py  models.py  sqlalchemy_repository.py
scripts/: utils.py
tests/: conftest.py
tests/unit/item/: test_entities.py  test_usecases.py
tests/unit/item/infra/: test_repository.py  test_sqlalchemy_repository.py
tests/unit/user/: test_entities.py  test_repository.py  test_usecases.py
tests/unit/user/infra/: test_sqlalchemy_repository.py
